update for chatbot

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plus House</title>
     <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
-    <script>
+    <!-- <script>
       window.addEventListener('dfMessengerLoaded', function (event) {
         const dfMessenger = document.querySelector('df-messenger')
         const style = document.createElement('style')
@@ -18,18 +18,18 @@
 
         dfMessenger.shadowRoot.querySelector('df-messenger-chat').shadowRoot.appendChild(style)
       })
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
       intent="WELCOME"
       chat-title="Plus_House_Bot"
       agent-id="6cebc39d-0bb2-4f28-8365-2e222bd74b94"
       language-code="vi"
-    ></df-messenger>
+    ></df-messenger> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
